--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,9 @@
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "test": "cross-env NODE_ENV=test node --test",
     "start:test": "cross-env NODE_ENV=test node index.js",
+    "build": "npm run build:ui && npm run copy-build",
+    "build:ui": "cd ../client && npm install && npm run build",
+    "copy-build": "mkdir -p dist && cp -r ../client/dist/* ./dist/",
     "lint": "eslint .",
     "format": "prettier --write .",
     "format:check": "prettier --check ."
